<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/DistanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/_0000_meters"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/DistacneLable"
        app:layout_constraintTop_toBottomOf="@+id/LongitutdeText" />

    <TextView
        android:id="@+id/LatitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/_48_745742"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/latitudeLable"
        app:layout_constraintTop_toTopOf="@+id/latitudeLable" />

    <TextView
        android:id="@+id/LongitutdeLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/longitude"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/latitudeLable"
        app:layout_constraintTop_toBottomOf="@+id/latitudeLable" />

    <TextView
        android:id="@+id/SpeedLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/average_speed"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/DistacneLable"
        app:layout_constraintTop_toBottomOf="@+id/DistacneLable" />

    <TextView
        android:id="@+id/DistacneLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/distance"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/LongitutdeLable"
        app:layout_constraintTop_toBottomOf="@+id/LongitutdeLable" />

    <TextView
        android:id="@+id/latitudeLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="298dp"
        android:text="@string/latitude"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LongitutdeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/_9_107246"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/LongitutdeLable"
        app:layout_constraintTop_toBottomOf="@+id/LatitudeText" />

    <TextView
        android:id="@+id/SpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/meters_sec"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/SpeedLable"
        app:layout_constraintTop_toBottomOf="@+id/DistanceText" />

    <Button
        android:id="@+id/UpdateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/update"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StopButton" />

    <Button
        android:id="@+id/ExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/exit"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpdateButton" />

    <Button
        android:id="@+id/StopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/stop_logging"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartButton" />

    <Button
        android:id="@+id/StartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/start_logging"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpeedLable" />

</android.support.constraint.ConstraintLayout>